{{$NEXT}}

2.03 2016-06-24

    - Bug fix: RT#109159 Number formatting tests can fail
    - Bug fix: RT#112582 Date tests fail on leap day
    - Minor packaging fixups

2.02 2016-06-01

    - Public release of 2.02

2.01_03 2016-05-25

    - cleanup unused modules and functions
    - fix indirect object notation
    - add label functionality
    - ensure disabled attributes are ignored
    - strip excessive/trailing whitespace
    - fix inflator bug RT76034
    - avoid warnings from CGI
    - enable more author/release tests
    - it language fixes
    - Remove link to old website - now unrelated/NSFW
    - avoid emitting unecessary warnings
    - enable use of Travis CI & coverage tests
    - fixes to ensure we pass all the additional author tests

2.01 2014-05-05

    - Avoid uninitialized warning

2.00 2014-04-11

    - New layout() method for customizing output of fields.
      Any custom elements which override string() will likely need modified.

    - Deprecated: reverse_single() and reverse_multi() are deprecated,
      and warn when used.
      If the new layout() is used, and there is no simple way to replicate
      the behaviour, these methods will have no affect.

    - TT template files changed - update them if you use a local copy.
      Files updated: field
      New files: field_layout, field_layout_block,
        field_layout_checkboxgroup_field, field_layout_comment,
        field_layout_contentbutton_field, field_layout_errors,
        field_layout_field, field_layout_javascript, field_layout_label,
        field_layout_label_field, field_layout_label_text,
        field_layout_multi_field, field_layout_parser,
        field_layout_select_field, field_layout_textarea_field.
      Files deleted due to layout() changes: checkboxgroup_tag,
        content_button, errors, input, input_tag, label, label_element,
        multi, select_tag, textarea_tag
      Unused files deleted: checkboxgroup.

    - New Filter::ForceListValue addresses rt bug #90813