@@ -10,14 +10,14 @@ extends 'HTML::FormFu::Validator';
 has callback => ( is => 'rw', traits => ['FormFuChained'] );
 
 sub validate_value {
-    my ( $self, $value ) = @_;
+    my ( $self, $value, $params ) = @_;
 
     my $callback = $self->callback || sub {1};
 
     ## no critic (ProhibitNoStrict);
     no strict 'refs';
 
-    my $ok = $callback->($value);
+    my $ok = $callback->($value, $params);
 
     return $ok;
 }
@@ -47,6 +47,10 @@ HTML::FormFu::Validator::Callback - Callback validator
 =head1 DESCRIPTION
 
 Callback validator.
+
+The first argument passed to the callback is the submitted value for the
+associated field. The second argument passed to the callback is a hashref of
+name/value pairs for all input fields.
 
 =head1 METHODS
 
